--- a/about.html
+++ b/about.html
@@ -155,7 +155,7 @@
         <ul class="navbar-list">
 
           <li class="navbar-item">
-            <a href="./index.html">
+            <a href="./">
               <button class="navbar-link  active" data-nav-link>Go To Home</button>
             </a>
           </li>
@@ -201,7 +201,7 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./images/icon-dev.svg" alt="Web development icon" width="40">
+                <img src="./assets/images/icon-dev.svg" alt="Web development icon" width="40">
               </div>
 
               <div class="service-content-box">
@@ -212,30 +212,12 @@
                 </p>
               </div>
 
-            <li class="service-item">
-
-              <div class="service-icon-box">
-                <img src="./images/icon-design.svg
-                " alt="design icon" width="40">
-              </div>
-
-              <div class="service-content-box">
-                <h4 class="h4 service-item-title">Web design</h4>
-
-                <p class="service-item-text">
-                  The most modern and high-quality design made at a professional level.
-                </p>
-              </div>
-
-            </li>
-
-
             </li>
 
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./images/icon-app.svg" alt="mobile app icon" width="40">
+                <img src="./assets/images/icon-app.svg" alt="mobile app icon" width="40">
               </div>
 
               <div class="service-content-box">
@@ -251,7 +233,7 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./images/icons8-painting-48.png" alt="camera icon" width="40">
+                <img src="./assets/images/icons8-painting-48.png" alt="camera icon" width="40">
               </div>
 
               <div class="service-content-box">
@@ -268,6 +250,45 @@
 
         </section>
 
+        <!-- 
+          - coding profile
+        -->
+
+         <section class="service">
+
+          <h3 class="h3 service-title">Challenge Me In...</h3>
+
+          <ul class="service-list">
+
+            <li class="service-item">
+
+              <div class="service-content-box">
+
+                <a class="h4 service-item-title" href="https://leetcode.com/spadmashankari/">Leetcode</a>
+              </div>
+
+            </li>
+            <li class="service-item">
+
+              <div class="service-content-box">
+
+                <a class="h4 service-item-title" href="https://www.skillrack.com/faces/resume.xhtml?id=304713&key=049f227e5c8284a9dde7b8e39fe1ceb69cc7e362">Skill Rack</a>
+              </div>
+
+            </li>
+            <li class="service-item">
+
+              <div class="service-content-box">
+
+                <a class="h4 service-item-title" href="https://auth.geeksforgeeks.org/user/spadmashankari/practice">GeeksforGeeks</a>
+              </div>
+
+            </li>
+
+
+          </ul>
+
+        </section>
 
         <!--
           - projects
