--- a/index.html
+++ b/index.html
@@ -23,13 +23,12 @@
 			<div class=p-5>
 				<a target=_blank rel="noopener noreferrer" aria-label="Padmashankari's GitHub" href=https://github.com/Padmashankari><i class="fab fa-github fa-3x socialicons"></i></a>
 				<a target=_blank rel="noopener noreferrer" aria-label="Padmashankari's LinkedIn" href=https://www.linkedin.com/in/padmashankari-s><i class="fab fa-linkedin fa-3x socialicons"></i></a>
-				<a target=_blank rel="noopener noreferrer" aria-label="Padmashankari's LeetcodeIn" href=https://leetcode.com/spadmashankari><i class="fa fa-leetcode fa-3x"></i></a>
 				
 			</div>
 			
 			<div class="p-5">
 				<p style="font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; font-size: large;">To know more about me just click!</p>
-				<a class="btn btn-outline-light btn-lg" role=button aria-label="About" href="./about.html" target="_blank">About</a>
+				<a class="btn btn-outline-light btn-lg" role=button aria-label="About" href="./about" target="_blank">About</a>
 				</div>
 				<div class="p-3">
 				<q style="font-size: large;">Believe in your infinite potential. Your only limitations are those you set upon yourself</q>
