--- a/index.html
+++ b/index.html
@@ -19,20 +19,20 @@
 	<div id=stars></div>
 		<div class="text-center container">
 			<h1 class=display-1>PADMASHANKARI S</h1>
-			<div class="Typist lead typist">Student | App Development Enthustiatic | Designer ツ</div>
+			<div style="font-size: large; font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;"><b>Student | App Development Enthustiatic ツ</b></div>
 			<div class=p-5>
-				<a target=_blank rel="noopener noreferrer" aria-label="Padmashankari's GitHub" href=https://github.com/Padmashankari><i class="fab fa-github fa-3x socialicons"></i></a>
+ 				<a target=_blank rel="noopener noreferrer" aria-label="Padmashankari's GitHub" href=https://github.com/Padmashankari><i class="fab fa-github fa-3x socialicons"></i></a>
 				<a target=_blank rel="noopener noreferrer" aria-label="Padmashankari's LinkedIn" href=https://www.linkedin.com/in/padmashankari-s><i class="fab fa-linkedin fa-3x socialicons"></i></a>
 				
 			</div>
 			
 			<div class="p-5">
-				<p style="font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; font-size: large;">To know more about me just click!</p>
+				<p style="font-size: large; font-size: large;"><b>To know more about me just click!</b></p>
 				<a class="btn btn-outline-light btn-lg" role=button aria-label="About" href="./about" target="_blank">About</a>
 				</div>
 				<div class="p-3">
-				<q style="font-size: large;">Believe in your infinite potential. Your only limitations are those you set upon yourself</q>
-				<p style="font-family:Verdana, Geneva, Tahoma, sans-serif;">-Roy T. Bennett</p>
+				<q style="font-size: large;"><b>Believe in your infinite potential. Your only limitations are those you set upon yourself</b></q>
+				<p style="font-family:Verdana, Geneva, Tahoma, sans-serif;"><b>-Roy T. Bennett</b></p>
 		        </div>
 				
 			</div>
