--- a/about.html
+++ b/about.html
@@ -48,7 +48,6 @@
           <h3 style="color: white;"><b>SKILLS</b></h3>
         </div>
 
-        <br/>
       </div>
 
       <div class="sidebar-info_more">
@@ -64,6 +63,8 @@
               </span>
             </div>
           </div>
+          </div>
+          <div class="info-content">
           <div class="skill-box">
             <span class="contact-title">CSS</span>
             <div class="skill-bar">
@@ -72,6 +73,8 @@
               </span>
             </div>
           </div>
+          </div>
+          <div class="info-content">
           <div class="skill-box">
             <span class="contact-title">JavaScript</span>
             <div class="skill-bar">
@@ -80,6 +83,8 @@
               </span>
             </div>
           </div>
+          </div>
+          <div class="info-content">
           <div class="skill-box">
             <span class="contact-title">React</span>
             <div class="skill-bar">
@@ -88,6 +93,8 @@
               </span>
             </div>
           </div>
+          </div>
+          <div class="info-content">
           <div class="skill-box">
             <span class="contact-title">NodeJS</span>
             <div class="skill-bar">
@@ -96,6 +103,8 @@
               </span>
             </div>
           </div>
+          </div>
+          <div class="info-content">
           <div class="skill-box">
             <span class="contact-title">C</span>
             <div class="skill-bar">
@@ -104,6 +113,8 @@
               </span>
             </div>
           </div>
+          </div>
+          <div class="info-content">
           <div class="skill-box">
             <span class="contact-title">C++</span>
             <div class="skill-bar">
@@ -112,6 +123,8 @@
               </span>
             </div>
           </div>
+          </div>
+          <div class="info-content">
           <div class="skill-box">
             <span class="contact-title">JAVA</span>
             <div class="skill-bar">
@@ -120,6 +133,8 @@
               </span>
             </div>
           </div>
+          </div>
+          <div class="info-content">
           <div class="skill-box">
             <span class="contact-title">SQL</span>
             <div class="skill-bar">
@@ -128,6 +143,8 @@
               </span>
             </div>
           </div>
+          </div>
+          <div class="info-content">
           <div class="skill-box">
             <span class="contact-title">Python</span>
             <div class="skill-bar">
