--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<div id=stars></div>
 		<div class="text-center container">
 			<h1 class=display-1>PADMASHANKARI S</h1>
-			<div style="font-size: large; font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;"><b>Student | App Development Enthustiatic ツ</b></div>
+			<div style="font-size: large; font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;"><b>DevOps Engineer @ Comcast ツ</b></div>
 			<div class=p-5>
  				<a target=_blank rel="noopener noreferrer" aria-label="Padmashankari's GitHub" href=https://github.com/Padmashankari><i class="fab fa-github fa-3x socialicons"></i></a>
 				<a target=_blank rel="noopener noreferrer" aria-label="Padmashankari's LinkedIn" href=https://www.linkedin.com/in/padmashankari-s><i class="fab fa-linkedin fa-3x socialicons"></i></a>
