update index file to avoid creating new tab

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			
 			<div class="p-5">
 				<p style="font-size: large; font-size: large;"><b>To know more about me just click!</b></p>
-				<a class="btn btn-outline-light btn-lg" role=button aria-label="About" href="./about" target="_blank">About</a>
+				<a class="btn btn-outline-light btn-lg" role=button aria-label="About" href="./about" target="_self">About</a>
 				</div>
 				<div class="p-3">
 				<q style="font-size: large;"><b>Believe in your infinite potential. Your only limitations are those you set upon yourself</b></q>
