--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
         <aside class="sidebar" data-sidebar>
             <div class="sidebar-info">
                 <figure class="avatar-box">
-                    <img src="./assets/images/Padma.jpg" alt="Padmashankari S" width="80">
+                    <img src="./assets/images/Gibli_art.png" alt="Padmashankari S" width="80">
                 </figure>
                 <div class="info-content">
                     <h1 class="name" title="Padmashankari">Padmashankari S</h1>
