--- a/index.html
+++ b/index.html
@@ -1,41 +1,55 @@
 <!DOCTYPE html>
-<html data-lt-installed=true style="" lang="en-US">
+<html lang="en">
+
 <head>
-	<meta charset=utf-8>
-	<meta name=viewport content="width=device-width,initial-scale=1">
-	<meta name=theme-color content=#000000>
-	<meta name=description content="Padmashankari - Personal page">
-	<meta property=og:image content=/social-image.png>
-	<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css">
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width,initial-scale=1">
+	<meta name="theme-color" content="#000000">
+	<meta name="description" content="Padmashankari - Personal page">
+	<meta property="og:image" content="/social-image.png">
 	<title>Padmashankari - Personal Page</title>
-	<link rel="stylesheet" href="main.css">
+
+	<!-- Bootstrap CSS -->
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
+	<!-- Font Awesome -->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+
 	<link rel="icon" type="image/x-icon" href="images/favicon.ico">
+	<link rel="stylesheet" href="main.css">
 </head>
 
 <body>
-	<!-- <noscript class=sf-hidden>You need to enable JavaScript to run this app!</noscript> -->
-	<div id=home class="title bg-transparent bgstyle text-light min-vh-100 d-flex align-content-center align-items-center flex-wrap m-0 jumbotron jumbotron-fluid" style="overflow:hidden;background:rgba(0,0,0,0) linear-gradient(136deg,rgb(68,132,206),rgb(26,215,192),rgb(255,155,17),rgb(155,89,182),rgb(255,127,127),rgb(236,240,241)) repeat scroll 0% 0% / 1200% 1200%">
-	<div id=stars></div>
-		<div class="text-center container">
-			<h1 class=display-1>PADMASHANKARI S</h1>
-			<div style="font-size: large; font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;"><b>Student | App Development Enthustiatic ツ</b></div>
-			<div class=p-5>
- 				<a target=_blank rel="noopener noreferrer" aria-label="Padmashankari's GitHub" href=https://github.com/Padmashankari><i class="fab fa-github fa-3x socialicons"></i></a>
-				<a target=_blank rel="noopener noreferrer" aria-label="Padmashankari's LinkedIn" href=https://www.linkedin.com/in/padmashankari-s><i class="fab fa-linkedin fa-3x socialicons"></i></a>
-				
+	<div id="home"
+		class="title bg-transparent bgstyle text-light min-vh-100 d-flex justify-content-center align-items-center text-center"
+		style="overflow:hidden;background:linear-gradient(136deg,rgb(68,132,206),rgb(26,215,192),rgb(255,155,17),rgb(155,89,182),rgb(255,127,127),rgb(236,240,241)) repeat scroll 0% 0% / 1200% 1200%">
+
+		<div id="stars"></div>
+
+		<div class="container">
+			<h1 class="display-4 fw-bold">PADMASHANKARI S</h1>
+			<p class="lead mb-4">Student | App Development Enthusiast ツ</p>
+
+			<div class="mb-4 d-flex justify-content-center gap-4">
+				<a target=_blank rel="noopener noreferrer" aria-label="Padmashankari's GitHub"
+					href=https://github.com/Padmashankari><i class="fab fa-github fa-3x socialicons"></i></a>
+				<a target=_blank rel="noopener noreferrer" aria-label="Padmashankari's LinkedIn"
+					href=https://www.linkedin.com/in/padmashankari-s><i
+						class="fab fa-linkedin fa-3x socialicons"></i></a>
 			</div>
-			
-			<div class="p-5">
-				<p style="font-size: large; font-size: large;"><b>To know more about me just click!</b></p>
-				<a class="btn btn-outline-light btn-lg" role=button aria-label="About" href="./about" target="_self">About</a>
-				</div>
-				<div class="p-3">
-				<q style="font-size: large;"><b>Believe in your infinite potential. Your only limitations are those you set upon yourself</b></q>
-				<p style="font-family:Verdana, Geneva, Tahoma, sans-serif;"><b>-Roy T. Bennett</b></p>
-		        </div>
-				
-			</div>
+			<p class="mb-3"><strong>To know more about me just click!</strong></p>
+			<a class="btn btn-outline-light btn-lg mb-4" href="./about" target="_self">About</a>
+
+			<blockquote class="blockquote">
+				<p><strong>“Believe in your infinite potential. Your only limitations are those you set upon
+						yourself.”</strong></p>
+				<footer class="blockquote-footer text-light">Roy T. Bennett</footer>
+			</blockquote>
 		</div>
 	</div>
+
+	<!-- Bootstrap JS -->
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
